Particle: UV Texture coordinate issue on hairs emitted from verts #51296

Closed
opened 2017-04-23 13:38:17 +02:00 by Leon Cheung · 8 comments
Member

System Information
Windows 8.1 64bit | GTX680

Blender Version
Broken: e92f235283

Short description of error
For hairs, when emitting from verts, the UVcoordinate is different from what it looks like when emitting from Face or Volume:

UV.png

Exact steps for others to reproduce the error

Particle_TexCo_UV.blend

**System Information** Windows 8.1 64bit | GTX680 **Blender Version** Broken: e92f235283 **Short description of error** For hairs, when emitting from verts, the **UV**coordinate is different from what it looks like when emitting from Face or Volume: ![UV.png](https://archive.blender.org/developer/F577571/UV.png) **Exact steps for others to reproduce the error** [Particle_TexCo_UV.blend](https://archive.blender.org/developer/F577573/Particle_TexCo_UV.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Member

Added subscriber: @LucaRood-3

Added subscriber: @LucaRood-3
Member

Are you talking about the direction the hairs point to? If so, yes, that is the intended behavior, as hairs are emitted in the normal direction of the emitter, be it a face or vert or whatnot.
I am not sure how this is related to texture coordinates, could you clarify?

Are you talking about the direction the hairs point to? If so, yes, that is the intended behavior, as hairs are emitted in the normal direction of the emitter, be it a face or vert or whatnot. I am not sure how this is related to texture coordinates, could you clarify?
Leon Cheung changed title from Particle: Texture coordinate issue on hairs emitted from verts to Particle: UV Texture coordinate issue on hairs emitted from verts 2017-04-28 18:24:40 +02:00
Author
Member

@LucaRood-3 Basically I mean the UV coordinate, which is different from other coordinates. Please see the updated file / screenshot.

@LucaRood-3 Basically I mean the UV coordinate, which is different from other coordinates. Please see the updated file / screenshot.
Luca Rood self-assigned this 2017-04-28 18:33:17 +02:00
Member

Ok, indeed there is something wrong with texture handling when emitting from verts, but the texture coordinates seem to be doing fine. Without looking at the code, I think the color of the first emitted hair is just being applied to all hairs, but the I see nothing wrong with the texture coordinates.
I'll take a look at this.

Ok, indeed there is something wrong with texture handling when emitting from verts, but the texture coordinates seem to be doing fine. Without looking at the code, I think the color of the first emitted hair is just being applied to all hairs, but the I see nothing wrong with the texture coordinates. I'll take a look at this.

This issue was referenced by fed853ea78

This issue was referenced by fed853ea782211298c902759ec8cd8e455d8b41d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51296
No description provided.