Fix T51296: UVs not working for hair emitted from vertices